# netbox

./: pyproject.toml
netbox/netbox/: settings.py
