[tool.poetry]
name = "netbox"
version = "3.0.3"
description = ""
authors = ["netbox-community"]
license = "Apache"
packages = [
  { include = "**/*.py", from = "netbox" }
]

[tool.poetry.dependencies]
python = "^3.8"
Django = "3.2.7"
django-cacheops = "5.1"
django-cors-headers = "3.8.0"
django-debug-toolbar = "3.2"
django-graphiql-debug-toolbar = "0.2"
django-filter = "2.4.0"
django-mptt = "0.13.3"
django-pglocks = "1.0.4"
django-prometheus = "2.1.0"
django-redis="5.0"
django-rq = "2.4"
django-tables2 = "2.4"
django-taggit = "1.5"
django-timezone-field = "4.2"
djangorestframework = "3.12.4"
drf-yasg = {version = "1.20.0", extras = ["validation"]}
graphene_django = "2.15"
gunicorn = "20.1"
Jinja2 = "3.0"
Markdown = "3.3.4"
markdown-include = "0.6"
mkdocs-material = "7.2"
netaddr = "0.8.0"
Pillow = "8.1.2"
psycopg2-binary = "2.9"
pycryptodome = "3.10.1"
PyYAML = "5.4.1"
svgwrite = "1.4.1"
tablib = "3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
